apps/albin/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: albin
spec:
  selector:
    app: albin
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: albin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: albin
  template:
    metadata:
      labels:
        app: albin
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m # reserve minimal CPU
              memory: 32Mi # reserve minimal memory
            limits:
              cpu: 100m # max 0.1 core
              memory: 64Mi # max 64 MB RAM
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: albin-html

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: albin
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system # same Gateway your airflow route uses
  hostnames:
    - "albin.bergtobias.com" # catch all hosts
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: albin
          port: 80
